next auth implement

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:SQLforraj@localhost:3306/issue-tracker"
+NEXTAUTH_URL= "http://localhost:3000"
+NEXTAUTH_SECRET =" w2%En%m*7yJM6D86cb5Wp9vV^7Q7s@zF"
